--- a/toggle/index.html
+++ b/toggle/index.html
@@ -30,52 +30,53 @@
     </style>
   </head>
   <body>
-    <div class="toglle-container">
-      <h1>Our Pricing</h1>
+    <div class="Header-Toggle">
+      <h2>Our Pricing</h2>
       <span>Annually</span><span>Monthly</span>
+    </div>
+    <div class="toglle-cards">
       <div class="Basic">
-        <h2>Basic</h2>
-        <h1>&dollar; 199.99</h1>
-        <hr style="color: gray" />
+        <h3>Basic</h3>
+        <h1><span class="dolar">&dollar;</span>199.99</h1>
+        <hr />
         <p>500 GB Storage</p>
-        <hr style="color: gray" />
+        <hr />
         <p>2 Users Allowed</p>
-        <hr style="color: gray" />
+        <hr />
         <p>Send up to 3 GB</p>
-        <hr style="color: gray" />
+        <hr />
         <button>Learn more</button>
       </div>
       <div class="Professional">
-        <h2>Professional</h2>
-        <h1>&dollar; 249.99</h1>
-        <hr style="color: gray" />
+        <h3>Professional</h3>
+        <h1><span class="dolar">&dollar;</span>249.99</h1>
+        <hr />
         <p>1 TB Storage</p>
-        <hr style="color: gray" />
+        <hr />
         <p>5 Users Allowed</p>
-        <hr style="color: gray" />
+        <hr />
         <p>Send up to 10 GB</p>
-        <hr style="color: gray" />
+        <hr />
         <button>Learn More</button>
       </div>
       <div class="Master">
-        <h2>Master</h2>
-        <h1>&dollar; 399.99</h1>
-        <hr style="color: gray" />
+        <h3>Master</h3>
+        <h1><span class="dolar">&dollar;</span>399.99</h1>
+        <hr />
         <p>2 TB Storage</p>
-        <hr style="color: gray" />
+        <hr />
         <p>10 Users Allowed</p>
-        <hr style="color: gray" />
+        <hr />
         <p>Send up to 20 GB</p>
-        <hr style="color: gray" />
+        <hr />
         <button>Learn more</button>
       </div>
     </div>
-
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </footer>
   </body>
 </html>
