--- a/toggle/index.html
+++ b/toggle/index.html
@@ -32,7 +32,14 @@
   <body>
     <div class="Header-Toggle">
       <h2>Our Pricing</h2>
-      <span>Annually</span><span>Monthly</span>
+      <div class="switch-toggle">
+        <span>Annually</span>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider"></span>
+        </label>
+        <span>Monthly</span>
+      </div>
     </div>
     <div class="toglle-cards">
       <div class="Basic">
