--- a/toggle/index.html
+++ b/toggle/index.html
@@ -30,60 +30,63 @@
     </style>
   </head>
   <body>
-    <div class="Header-Toggle">
-      <h2>Our Pricing</h2>
-      <div class="switch-toggle">
-        <span>Annually</span>
-        <label class="switch">
-          <input type="checkbox" />
-          <span class="slider"></span>
-        </label>
-        <span>Monthly</span>
+    <div class="toglle-container">
+      <div class="Header-Toggle">
+        <h2>Our Pricing</h2>
+        <div class="switch-toggle">
+          <span>Annually</span>
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span>
+          </label>
+          <span>Monthly</span>
+        </div>
       </div>
+      <div class="cards-container">
+        <div class="Basic">
+          <h3>Basic</h3>
+          <h1><span class="dolar">&dollar;</span>199.99</h1>
+          <hr />
+          <p>500 GB Storage</p>
+          <hr />
+          <p>2 Users Allowed</p>
+          <hr />
+          <p>Send up to 3 GB</p>
+          <hr />
+          <button>Learn more</button>
+        </div>
+        <div class="Professional">
+          <h3>Professional</h3>
+          <h1><span class="dolar">&dollar;</span>249.99</h1>
+          <hr />
+          <p>1 TB Storage</p>
+          <hr />
+          <p>5 Users Allowed</p>
+          <hr />
+          <p>Send up to 10 GB</p>
+          <hr />
+          <button>Learn More</button>
+        </div>
+        <div class="Master">
+          <h3>Master</h3>
+          <h1><span class="dolar">&dollar;</span>399.99</h1>
+          <hr />
+          <p>2 TB Storage</p>
+          <hr />
+          <p>10 Users Allowed</p>
+          <hr />
+          <p>Send up to 20 GB</p>
+          <hr />
+          <button>Learn more</button>
+        </div>
+      </div>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/Kyorugi?tab=repositories">Kyorugi</a>.
+      </footer>
     </div>
-    <div class="toglle-cards">
-      <div class="Basic">
-        <h3>Basic</h3>
-        <h1><span class="dolar">&dollar;</span>199.99</h1>
-        <hr />
-        <p>500 GB Storage</p>
-        <hr />
-        <p>2 Users Allowed</p>
-        <hr />
-        <p>Send up to 3 GB</p>
-        <hr />
-        <button>Learn more</button>
-      </div>
-      <div class="Professional">
-        <h3>Professional</h3>
-        <h1><span class="dolar">&dollar;</span>249.99</h1>
-        <hr />
-        <p>1 TB Storage</p>
-        <hr />
-        <p>5 Users Allowed</p>
-        <hr />
-        <p>Send up to 10 GB</p>
-        <hr />
-        <button>Learn More</button>
-      </div>
-      <div class="Master">
-        <h3>Master</h3>
-        <h1><span class="dolar">&dollar;</span>399.99</h1>
-        <hr />
-        <p>2 TB Storage</p>
-        <hr />
-        <p>10 Users Allowed</p>
-        <hr />
-        <p>Send up to 20 GB</p>
-        <hr />
-        <button>Learn more</button>
-      </div>
-    </div>
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </footer>
   </body>
 </html>
